# temporal

./: .gitignore  Directory.Build.props  README.md  SECURITY.md  rust-toolchain.toml
.claude/skills/verify/: SKILL.md
.config/: dotnet-tools.json
.github/workflows/: ci.yml
daemon/: Cargo.toml  deny.toml
daemon/crates/adapters/: Cargo.toml
daemon/crates/adapters/src/: chrome.rs  editor.rs  generic.rs  lib.rs  osascript.rs  proc_timeout.rs  rehydrate.rs  terminal.rs
daemon/crates/domain/: Cargo.toml
daemon/crates/domain/bindings/: AdapterKind.ts  BrowserTab.ts  CandidateKind.ts  IpcRequest.ts  IpcResponse.ts  ItemRef.ts  NodePayload.ts  PreflightNode.ts  QueryCandidate.ts  RehydrationPayload.ts  TerminalTab.ts  WindowGeometry.ts  WindowNode.ts  WorkspaceGroup.ts  WorkspaceState.ts
daemon/crates/domain/src/: catalog.rs  geometry.rs  grouping.rs  lib.rs  planning.rs  tagging.rs  types.rs  wire.rs
daemon/crates/domain/tests/: wire_compat.rs
daemon/crates/domain/tests/fixtures/: fsharp_wire_fixtures.jsonl
daemon/crates/ipc/: Cargo.toml
daemon/crates/ipc/src/: lib.rs
daemon/crates/macos-ffi/: Cargo.toml
daemon/crates/macos-ffi/examples/: list_windows.rs
daemon/crates/macos-ffi/src/: ax.rs  bundle.rs  catalog.rs  display.rs  lib.rs  permissions.rs  window_list.rs
daemon/crates/semantic/: Cargo.toml
daemon/crates/semantic/src/: embedder.rs  lib.rs  tagger.rs
daemon/crates/storage/: Cargo.toml
daemon/crates/storage/src/: lib.rs
daemon/crates/temporal-core/: Cargo.toml
daemon/crates/temporal-parity/: Cargo.toml
daemon/crates/temporald/: Cargo.toml
daemon/crates/temporald/src/: convert.rs  handler.rs  main.rs  probe.rs
daemon/crates/temporald/tests/: ipc_e2e.rs  semantic_e2e.rs
shared/Temporal.Domain/: Codecs.fs  Json.fs  Lib.fs  Planning.fs  Tagging.fs  Temporal.Domain.fsproj  Types.fs
shared/Temporal.Domain.Tests/: CodecTests.fs  JsonTests.fs  PlanningTests.fs  TaggingTests.fs  Temporal.Domain.Tests.fsproj
shared/Temporal.Parity/: Fixtures.fs  Program.fs  Temporal.Parity.fsproj
shared/Temporal.UI/: App.fs  Format.fs  Temporal.UI.fsproj
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  format.ts  main.tsx  styles.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs  main.rs
