[workspace]
resolver = "2"
members = [
    "crates/ipc",
    "crates/adapters",
    "crates/macos-ffi",
    "crates/storage",
    "crates/temporal-core",
    "crates/temporal-parity",
    "crates/temporald",
]
exclude = [
    "crates/temporal-parity/src/fable_modules/fable-library-rust",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# "atomic" switches Lrc from Rc to Arc so generated domain values are Send/Sync
# and can cross tokio task boundaries in the daemon.
fable_library_rust = { path = "crates/temporal-core/src/fable_modules/fable-library-rust", features = ["atomic"] }
temporal-core = { path = "crates/temporal-core" }

[profile.release]
lto = "thin"
codegen-units = 1
