[workspace]
resolver = "2"
members = [
    "crates/adapters",
    "crates/domain",
    "crates/ipc",
    "crates/macos-ffi",
    "crates/semantic",
    "crates/storage",
    "crates/temporald",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[profile.release]
lto = "thin"
codegen-units = 1
