# Standalone workspace: the daemon's Cargo workspace stays UI-free.
[workspace]

[package]
name = "temporal-ui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "temporal_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["net", "io-util", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
