[package]
name = "temporal-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "macros", "time"] }
tracing = "0.1"
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
