[package]
name = "temporal-macos-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
objc2-core-foundation = "0.3"
objc2-core-graphics = "0.3"
libproc = "0.14"
plist = "1"
thiserror = "2"
tracing = "0.1"
accessibility-sys = "0.2.0"
core-foundation = "0.10"
