[package]
name = "temporal-semantic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ort = { version = "=2.0.0-rc.10", features = ["download-binaries"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
thiserror = "2"
tracing = "0.1"
llama-cpp-2 = { version = "0.1.151", features = ["metal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
