[package]
name = "temporald"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
temporal-domain = { path = "../domain" }
temporal-ipc = { path = "../ipc" }
temporal-storage = { path = "../storage" }
temporal-adapters = { path = "../adapters" }
temporal-semantic = { path = "../semantic" }
temporal-macos-ffi = { path = "../macos-ffi" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
